* RSS minor switch: change "on paragraph number #9" to "(paragraph no. 9)" * FIXED: The embed Object code was not loading properly when clicked. Now it does * ENHANCEMENT: html embed is now a blockquote instead of div * FIXED: alert would appear when set to classic mode * ISSUE#4 FIXED CommentBrowser now much clearer * ISSUE#1 FIXED empty tags generate empty selection paragraph * ISSUE#12 FIXED typo when outputting xml in embed code * NEW: added support for google frame when available * NEW: stylized debug mode * If simpleXml fails it automatically reverts to regexp parsing * ISSUE#3 FIXED comment appearing multiple times fix * ISSUE#8 FIXED The Comments by Section page, displays the sections in reverse order * Removed debug code to measure function speeds * Removed mu-plugins support. For mu-support use Plugin-Commander * FIXED: commentcount and commenticon positioning IE6 * FIXED: highlight scales properly in IE6/7

--- a/trunk/digressit/style/ie6.css
+++ b/trunk/digressit/style/ie6.css
@@ -3,12 +3,31 @@ html, body {
 }
 	
 #commentbox {
- position: absolute !important;
+	position: absolute !important;
 }
 
 .containerTable{
-	height: 400px !important;
-	
+	height: 350px !important;	
+}
+
+.postmetadata{
+	margin-top: 50px;
+}
+
+.commentarea{
+	background-color: #E6E6E6 !important;
 }
 
 
+.commenticonbox {
+	position: relative;
+}
+
+.commenticonbox img{
+	position: absolute;
+}
+
+.commenticonbox small{
+	position: absolute;
+	left: 20px;
+}
