--- a/trunk/digressit/theme/style.css
+++ b/trunk/digressit/theme/style.css
@@ -1,12 +1,12 @@
 /*
-Theme Name: Digress.it
+Theme Name: Digress.it Classic
 Theme URI:http://digress.it
 Description: This is the default theme for digress.it, a plugin allows readers to comment paragraph by paragraph in the margins of a text.
-Version: 2.1.7
+Version: 2.1.8
 Author:Eddie A. Tejeda
 Author URI:http://www.visudo.com
 
-	"CommentPress Default" is based on a theme by
+	"Digress.it Classic" is based on a theme by
 	Bryan Helmig of Mid Mo Design: http://midmodesign.com/.
 	called 	"Clean Home" 
 	
@@ -16,7 +16,6 @@ Author URI:http://www.visudo.com
 
 
 
- 
 body {
 	background-color: white;
 	margin:0px;
