--- a/trunk/digressit/theme/styles/classic.css
+++ b/trunk/digressit/theme/styles/classic.css
@@ -1,4 +1,22 @@
 /*
+Theme Name: Digress.it Classic
+Theme URI:http://digress.it
+Description: This is the default theme for digress.it, a plugin allows readers to comment paragraph by paragraph in the margins of a text.
+Version: 2.1.8
+Author:Eddie A. Tejeda
+Author URI:http://www.visudo.com
+
+	"Digress.it Classic" is based on a theme by
+	Bryan Helmig of Mid Mo Design: http://midmodesign.com/.
+	called 	"Clean Home" 
+	
+	This version was modified by Eddie A. Tejeda
+	for the Wordpress Plugin: CommentPress 2.0
+*/
+
+
+
+/*
 AllowDrag:false
 AllowIconize:false
 AllowMinimize:false
@@ -157,7 +175,7 @@ i, em, .italic{ font-style:italic; }
 	background-color: #ffffff; 
 	padding: 0px;
 	min-height: 300px;	
-	width: 1000px;
+	width: 1015px;
 	height: 100%;
 	padding: 20px 0px 0px 40px;
 }
@@ -199,7 +217,7 @@ i, em, .italic{ font-style:italic; }
 }
 
 #page{
-	width: 1000px;
+	width: 1015px;
 	height: 100%;
 	background-color: white;
 	padding-top:10px;
