--- a/trunk/digressit/theme/styles/default.css
+++ b/trunk/digressit/theme/styles/default.css
@@ -1,12 +1,12 @@
 /*
-Theme Name: DigressIt
-Theme URI:http://digressit.org
-Description: This is the default theme for Annotate, a plugin allows readers to comment paragraph by paragraph in the margins of a text.
-Version:2.1
+Theme Name: Digress.it
+Theme URI:http://digress.it
+Description: This is the default theme for digress.it, a plugin allows readers to comment paragraph by paragraph in the margins of a text.
+Version: 2.1.8
 Author:Eddie A. Tejeda
 Author URI:http://www.visudo.com
 
-	"CommentPress Default" is based on a theme by
+	"Digress.it Default" is based on a theme by
 	Bryan Helmig of Mid Mo Design: http://midmodesign.com/.
 	called 	"Clean Home" 
 	
