scroll issue finally resolved on IE6!!!! Ordered list who on IE more UI tweaks.

--- a/trunk/digressit/style/ie6.css
+++ b/trunk/digressit/style/ie6.css
@@ -33,6 +33,16 @@ html, body {
 }
 
 
-li.page_item a span img{
-	display: none;
+.cute_menu_icons{
+	display: none;	
+}
+
+
+ol {
+	padding-left: 40px;
+
+}
+
+html{
+	overflow:scroll !important;	
 }
