more IE fixes. disabled the paragraph level trackbacks

--- a/trunk/digressit/style/ie6.css
+++ b/trunk/digressit/style/ie6.css
@@ -1,5 +1,5 @@
 html, body {
-	height: 100%;	overflow: hidden; 
+	height: 100%;
 }
 	
 #commentbox {
@@ -47,6 +47,9 @@ html{
 	overflow:scroll !important;	
 }
 
+.paragraph_feed{
+	display: none;
+}
 
 #sidebar{
 	max-width: 300px !important;
