--- a/trunk/digressit/style/style.css
+++ b/trunk/digressit/style/style.css
@@ -32,6 +32,18 @@
 	
 }
 
+#respond{
+	display: none;
+}
+.paragraph_number_medium{
+	font-size: 15px;
+	padding-right: 5px;
+}
+
+.paragraph_number_large{
+	font-size: 20px;
+	padding-right: 5px;
+}
 .containerBody{
 	height: 100%;
 }
@@ -92,6 +104,14 @@ h6{
 	margin-left: -1px;
 	margin-bottom: 2px;
 }
+
+a img {
+	border:0 none;
+	float:right;
+	padding:4px;
+}
+
+
 
 #commentboxdrag:hover{
 	cursor: move;	
@@ -308,6 +328,25 @@ ol, ul{
 	padding-left: 5px;
 	
 }
+
+.write-comment-action{
+
+	background: url(../images/commentbox/add.png) no-repeat;
+	width: 16px;
+	height: 16px;
+	float: right;
+	padding-top: 3px;
+}
+
+.read_num_comment{
+	position: absolute;
+	left: 35px;
+}
+
+.read_num_comment_general{
+	padding-top: 1px;
+	margin-left: 25px;
+}
 #respond h3{
 	font-size: 10pt;
 	padding-bottom: 0px;
@@ -361,10 +400,11 @@ ol, ul{
 }
 
 
+
+
 #accordion > div > h6 {
 	border:0 none;
 	font-size:100%;
-	line-height:1.3;
 	list-style-image:none;
 	list-style-position:outside;
 	list-style-type:none;
@@ -374,23 +414,8 @@ ol, ul{
 	outline-width:0;
 	padding:0;
 	text-decoration:none;
-}
+	padding-left: 8px;
 
-
-
-#accordion > div > h6 {
-	border:0 none;
-	font-size:100%;
-	line-height:1.3;
-	list-style-image:none;
-	list-style-position:outside;
-	list-style-type:none;
-	margin:0;
-	outline-color:-moz-use-text-color;
-	outline-style:none;
-	outline-width:0;
-	padding:0;
-	text-decoration:none;
 }
 
 
@@ -441,7 +466,6 @@ ol, ul{
 }
 
 #accordion h6 > a{
-	line-height:1.8;
 	list-style-image:none;
 	list-style-position:outside;
 	list-style-type:none;
@@ -451,7 +475,7 @@ ol, ul{
 	outline-style:none;
 	outline-width:medium;
 	text-decoration:none;	
-	padding:0.3em 0.5em 0.5em 0;
+	padding:0.1em 0.5em 0.5em 0;
 }
 
 
