* feeds work with permalinks * simplexml errors and supressed and html_entity_decode() is called on text to preview xml parse errors * Added "Edit this entry" when logged in * Home page excluded from menu * Ajax polling now only happens when window is in focused * resizing window rescales the highlighted area * minimize icons work again * comments don't blink-appear on page load when its lots of comments * disabling theming... instead using stylesheets * FIXED: editing posts was not working * ENHANCEMENT: added support for "general comments" page * ENHANCEMENT: The search page only shows a limited number of results. If there are more than 10(?),  how do you navigate to the next page of results? * FIXED: commentbrowser breaks when name has a quote mark (apostrophe) * FIXED: when there are no comments in the block, scrolling to comment area was wonkey * ENHANCEMENT: we support parsing lists. Currently only works with OL. * ENHANCEMENT: clearer commentbox design. New icon that gives ability to go directly to comment form * FIXED: Trackbacks should be working now

--- a/trunk/digressit/style/style.css
+++ b/trunk/digressit/style/style.css
@@ -41,7 +41,7 @@
 }
 
 .paragraph_number_large{
-	font-size: 20px;
+	font-size: 15px;
 	padding-right: 5px;
 }
 .containerBody{
@@ -335,7 +335,7 @@ ol, ul{
 	width: 16px;
 	height: 16px;
 	float: right;
-	padding-top: 3px;
+	margin-right: 3px;
 }
 
 .read_num_comment{
@@ -426,7 +426,8 @@ ol, ul{
 	font-weight:normal;
 	outline-style:none;
 	outline-width:medium;
-	height: 25px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	-moz-border-radius: 5px;
 	-khtml-border-radius: 5px;
 	-webkit-border-radius: 5px;	
@@ -439,7 +440,7 @@ ol, ul{
 	height: 100% ! important; 
 	display: block;
 	border: solid #DDD 1px;
-	padding: 0 5px 0 5px;
+	padding: 5px;
 	-moz-border-radius: 5px;
 	-khtml-border-radius: 5px;
 	-webkit-border-radius: 5px;	
@@ -475,7 +476,6 @@ ol, ul{
 	outline-style:none;
 	outline-width:medium;
 	text-decoration:none;	
-	padding:0.1em 0.5em 0.5em 0;
 }
 
 
