--- a/trunk/digressit/theme/style.css
+++ b/trunk/digressit/theme/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: Digress.it Classic
+Theme Name: Digress.it 
 Theme URI:http://digress.it
 Description: This is the default theme for digress.it, a plugin allows readers to comment paragraph by paragraph in the margins of a text.
-Version: 2.2
+Version: 2.2.2
 Author:Eddie A. Tejeda
 Author URI:http://www.visudo.com
 
@@ -202,10 +202,14 @@ table tr td {
 }
 
 .post {
-	padding:0 30px 0 0;
-	text-align: justify;
+	background-color:threedhighlight;
+	padding:5px;
+	text-align:left;
 }
 
+.commentlist{
+	display: none;
+}
 .entry{
 
 }
