--- a/trunk/digressit/theme/styles/default.css
+++ b/trunk/digressit/theme/styles/default.css
@@ -651,7 +651,7 @@ ol li, #sidebar ul ol li {
 
 
 .page_item_commenters{
-	background: url(http://wordpress.local/wp-content/plugins/digressit/theme/images/famfamfam/book.png);
+	background: url(../images/famfamfam/book.png);
 }
 
 
