--- a/trunk/digressit/style/style.css
+++ b/trunk/digressit/style/style.css
@@ -167,9 +167,6 @@ a img {
 	
 }
 
-.commentarea{
-
-}
 
 #new_comment{
 	display: none;
@@ -345,6 +342,7 @@ ol, ul{
 .read_num_comment{
 	position: absolute;
 	left: 35px;
+	cursor: pointer;
 }
 
 .read_num_comment_general{
@@ -405,12 +403,14 @@ ol, ul{
 
 }
 
+/****** ACCORDION ***********/
 
 
 
-#accordion > div > h6 {
+
+#accordion  .commentblock {
 	border:0 none;
-	font-size:100%;
+	font-size:12px;
 	list-style-image:none;
 	list-style-position:outside;
 	list-style-type:none;
@@ -425,7 +425,7 @@ ol, ul{
 }
 
 
-#accordion > div > h6 {
+#accordion .commentarea {
 	background:#E6E6E6 url(../js/jquery/themes/smoothness/images/ui-bg_glass_75_e6e6e6_1x400.png) repeat-x scroll 50% 50%; 
 	border:1px solid #D3D3D3;
 	color:#555555;
@@ -438,6 +438,7 @@ ol, ul{
 	-khtml-border-radius: 5px;
 	-webkit-border-radius: 5px;	
 	border-radius: 5px;
+	height: 18px;
 	
 }
 
@@ -453,26 +454,26 @@ ol, ul{
 	border-radius: 5px;
 	
 }
-#accordion > div > h6 {
+#accordion > .commentarea {
 	-moz-border-radius-bottomleft:4px;
 	-moz-border-radius-bottomright:4px;
 	-moz-border-radius-topleft:4px;
 	-moz-border-radius-topright:4px;
 }
 
-#accordion > div > h6{
+#accordion > .commentarea{
 	cursor:pointer;
 	margin-top:1px;
 	position:relative;
 }
 
-#accordion > div > h6 {
+#accordion > .commentarea {
 	cursor:pointer;
 	margin-top:1px;
 	position:relative;
 }
 
-#accordion h6 > a{
+#accordion > .commentblock > a{
 	list-style-image:none;
 	list-style-position:outside;
 	list-style-type:none;
