a few bug fixes in IE

--- a/trunk/theme/ie7.css
+++ b/trunk/theme/ie7.css
@@ -1,84 +1,3 @@
-.sidebar-comment-count-double-grey{
-/*	padding-top: 5px; */
-}
-
-ul{
-	padding: 20px;
-	margin: 0;
-}
-
-.sidebar .sidebar-item {
-
-	
-}
-
-
-.open-rule-header{
-	margin-top: 50px !important;
-	padding-top: 50px;
-}
-
-.texting-icon  {
-	background:url("images/Global/texting_icon.png") no-repeat scroll center top transparent;
-	margin-left:-20px;
-	padding:10px 8px;
-	position:absolute;
-}
-
-
-.page #sidebar, .search #sidebar{
-	padding-top: 50px;
-}
-
-
-.sidebar-comment-count-single-dark  {
-	background:url("images/RuleHome/bubbles_darkx3/bubble_dark_1digit.png") no-repeat scroll 0 3px transparent;
-}
-.sidebar-comment-count-double-dark  {
-	background:url("images/RuleHome/bubbles_darkx3/bubble_dark_2digit.png") no-repeat scroll 0 3px transparent;
-}
-.sidebar-comment-count-triple-dark  {
-	background:url("images/RuleHome/bubbles_darkx3/bubble_dark_3digit.png") no-repeat scroll 0 3px transparent;
-}
-
-
-.sidebar-comment-count-single-grey   {
-	background:url("images/RuleHome/bubbles_darkx3/bubble_dark_1digit.png") no-repeat scroll 0 3px transparent;
-}
-.sidebar-comment-count-double-grey  {
-	background:url("images/RuleHome/bubbles_darkx3/bubble_dark_2digit.png") no-repeat scroll 0 3px transparent;
-}
-.sidebar-comment-count-triple-grey  {
-	background:url("images/RuleHome/bubbles_darkx3/bubble_dark_3digit.png") no-repeat scroll 0 3px transparent;
-}
-
-
-.learn-about-rule-making-graphic{
-	left: 0 !important;
+#mainpage .navigation{
 	margin-left: 0;
-	padding-left: 0;
-	position: absolute;
 }
-
-.step_block p{
-	margin-left: 0;
-	padding-left: 0;
-	left: 0;
-}
-
-
-.learn-more-video-frame{
-	margin-top: 100px !important;
-}
-
-#header{
-	overflow: visible;
-}
-
-
-
-.home #learn-more-video-frame{
-
-	top:20px;
-}
-
