during install default threading set to 2 threading option supported login/register menu now in the navigation by default new fancy lightbox login screen added empty "toplevel-respond" classes on each comment block to place commentbox duplicate comment search on comments-functions.php	now takes in proper comment variable name sidebar searchbox stylized

--- a/trunk/theme/mainpage.css
+++ b/trunk/theme/mainpage.css
@@ -53,15 +53,17 @@
 #mainpage .widget_search,
 #mainpage .previews
 {
+	-moz-box-shadow:3px 3px 7px #AAAAAA;
 	border:1px solid;
 	float:right;
 	margin:10px;
+	min-width:265px;
 	padding:5px 10px 20px 15px;
-	width:60%;
-	-moz-box-shadow:3px 3px 7px #AAAAAA;
 	
 }
-
+#mainpage .previews{
+	width: 60%;
+}
 
 #content #digress-it-list-posts{
 	width: 50%;
