--- a/trunk/theme/theme.css
+++ b/trunk/theme/theme.css
@@ -189,7 +189,7 @@ h4 {
 
 #submit-wrapper{
 	position: relative;
-	height:20px ;
+	height:20px;
 }
 #submit-wrapper .submit{
 
@@ -562,6 +562,7 @@ a{
 #respond{
 	display: none;
 	margin-top:15px;
+	padding: 5px 0 0px;
 }
 
 
@@ -767,13 +768,29 @@ h2{
 	font-weight:bold;
 }
 
-.depth-2 .comment-reply {
-	display: none;
+
+.depth-1{
+	margin-left: 0;
 }
-.depth-2 {
+.depth-2{
 	margin-left: 20px;
-	
 }
+.depth-3{
+	margin-left: 40px;	
+}
+.depth-4{
+	margin-left: 60px;	
+}
+.depth-5{
+	margin-left: 80px;	
+}
+.depth-6{
+	margin-left: 100px;	
+}
+.depth-7{
+	margin-left: 120px;	
+}
+
 
 #menu-primary {
 	display:block;
@@ -783,6 +800,7 @@ h2{
 	z-index:0;
 	position: relative;
 	clear: both;
+	padding-left: 30px;
 }
 
 .container{
@@ -791,7 +809,8 @@ h2{
 
 #menu-primary ul{
 	margin: 0;
-	padding: 0 25px;
+	padding: 0;
+	display: inline;
 }
 #menu-primary li {
 	display:inline;
