--- a/trunk/theme/theme.css
+++ b/trunk/theme/theme.css
@@ -335,6 +335,10 @@ h4 {
 	top:10px;
 	display: block;	
 }
+
+#menu-primary .menu-menu-container{
+	display: inline;
+}
 .textblock {
 	min-height: 0;
 	border-color: white;
@@ -645,7 +649,7 @@ a{
 }
 
 #searchform{
-	padding:2px 7px 5px;
+	padding:2px 7px 5px 0;
 }
 
 
@@ -811,14 +815,11 @@ h2{
 
 
 #menu-primary {
-	display:block;
-	left:0;
-	text-align:left;
+	clear:both;
+	right:35px;
+	text-align:right;
 	width:100%;
 	z-index:0;
-	position: relative;
-	clear: both;
-	font-size: 80%;
 }
 
 .container{
