load list-posts as default widget on sidebar during activation properly labeled the widget blocks register page styled better removed mu functions from comment parser added two new comment parser functions, regexp and discrete (more documentation later) renamed add_digressit_content_function to register_digressit_content_function order mainpage posts

--- a/trunk/theme/style.css
+++ b/trunk/theme/style.css
@@ -1177,3 +1177,12 @@ img{
 	color:#EEEEEE;
 }
 
+
+.mu_register input{
+	width: 20% !important;
+	position: relative;
+}
+
+.widecolumn{
+	-moz-box-shadow:0 25px 30px #AAAAAA;
+}
