better detection and loading of widgets renamed ListPosts to ListPostsWithCommentCount Moved some of the livesearch code into it's own LiveContentSearch widget goto support for comment browser better styling for floating box in frontpage and commentbrowser better mainpage/frontpage detection fixed is_commentbrowser function New lightbox login and registration forms Better handling of menus renamed add_digressit_*  functions to register_digressit_* added function to enable/disable comment grouping extended beta until Nov 15 added pot files for translation specialized css files (page.css) are loaded only on their proper pages renamed comments_by_user to comments_by_contributor (backward support remains) change default font to Times the sidebar, paragraph count and comment count update with new post adding support for lightbox slots (columns) more options in the backend

--- a/trunk/theme/mainpage.css
+++ b/trunk/theme/mainpage.css
@@ -15,7 +15,7 @@
 
 #mainpage .navigation{
 	float:left;
-	max-width:30%;
+	width:30%;
 	min-height:800px;
 	padding-left:25px;
 	padding-right:15px;
@@ -53,8 +53,8 @@
 #mainpage .widget_search,
 #mainpage .previews
 {
-	-moz-box-shadow:3px 3px 7px #AAAAAA;
-	border:1px solid;
+	-moz-box-shadow:3px 3px 7px #BBBCBD;
+	border:1px solid #BBBCBD;
 	float:right;
 	margin:10px;
 	min-width:265px;
@@ -62,7 +62,8 @@
 	
 }
 #mainpage .previews{
-	width: 60%;
+	margin-right:5%;
+	width:50%;
 }
 
 #content #digress-it-list-posts{
