--- a/trunk/theme/lightboxes.css
+++ b/trunk/theme/lightboxes.css
@@ -249,3 +249,30 @@ a:hover{
 }
 
 
+
+.lightbox-next{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+
+}
+
+.lightbox-previous{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+
+.lightbox-slider{
+	width: 400px;
+	height: 400px;
+	overflow-x:hidden;
+}
+
+.lightbox-slot{
+	position: relative;
+	left: 10;
+	float: left;
+}
+
